--- a/2023/ocaml/bin/dune
+++ b/2023/ocaml/bin/dune
@@ -1,7 +1,17 @@
-(executable
- (modules Day_01)
- (public_name day_01)
- (name day_01)
+(library
+ (name solution_01)
+ (modules solution_01)
  (libraries aoc)
+ (inline_tests)
  (preprocess
-  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_deriving.make)))
+  (pps
+   ppx_deriving.show
+   ppx_deriving.eq
+   ppx_deriving.ord
+   ppx_deriving.make
+   ppx_inline_alcotest)))
+
+(executable
+ (name run_01)
+ (modules run_01)
+ (libraries solution_01))
