--- a/2023/ocaml/lib/dune
+++ b/2023/ocaml/lib/dune
@@ -1,4 +1,10 @@
 (library
  (name aoc)
+ (inline_tests)
  (preprocess
-  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_deriving.make)))
+  (pps
+   ppx_deriving.show
+   ppx_deriving.eq
+   ppx_deriving.ord
+   ppx_deriving.make
+   ppx_inline_alcotest)))
