update: aoc day 3 part 1

--- a/2023/ocaml/bin/dune
+++ b/2023/ocaml/bin/dune
@@ -33,3 +33,21 @@
  (name run_02)
  (modules run_02)
  (libraries solution_02))
+
+(library
+ (name solution_03)
+ (modules solution_03)
+ (libraries aoc)
+ (inline_tests)
+ (preprocess
+  (pps
+   ppx_deriving.show
+   ppx_deriving.eq
+   ppx_deriving.ord
+   ppx_deriving.make
+   ppx_inline_alcotest)))
+
+(executable
+ (name run_03)
+ (modules run_03)
+ (libraries solution_03))
