--- a/2023/ocaml/bin/dune
+++ b/2023/ocaml/bin/dune
@@ -69,3 +69,21 @@
  (name run_04)
  (modules run_04)
  (libraries solution_04))
+
+(library
+ (name solution_05)
+ (modules solution_05)
+ (libraries aoc base angstrom)
+ (inline_tests)
+ (preprocess
+  (pps
+   ppx_deriving.show
+   ppx_deriving.eq
+   ppx_deriving.ord
+   ppx_deriving.make
+   ppx_inline_alcotest)))
+
+(executable
+ (name run_05)
+ (modules run_05)
+ (libraries solution_05))
